--- a/src/design/theme.less
+++ b/src/design/theme.less
@@ -42,6 +42,10 @@ html[data-theme='light'] {
       0 1px 0 0 #434343 inset;
   }
 
+  .ant-card {
+    // background: #464b64 !important;
+  }
+
   .ant-calendar-selected-day .ant-calendar-date {
     color: rgb(0 0 0 / 80%);
   }
